h1. Changelog for tabulatr

h2. 0.3.0

* Converted into a Rails 3.1 engine and moved css and images to use the new asset pipeline. Works with 3.0.x -- 'opefully. Thanks to all that reported the problem.
* Header cells are now auto translated. Thanks to <a href="https://github.com/niedhui">niedhui</a>!

h2. 0.2.1

* Fixed a ruby 1.8 syntax issue. Thanks to <a href="https://github.com/TBAA">TBAA</a> for reporting!

h2. 0.2.0

* Mongoid can also be used in place of ActiveRecord
* fixed handling of the primary_key column and name
* Added dom_id to tables tr. Thanks to <a href="https://github.com/sterrym">sterrym (Tim Glen)</a>!
* Added note on "Request-URI Too Large error" to README

h2. 0.1.3

* nicer table headers. Thanks to <a href="https://github.com/troya2" target="_blank">troya2 (Troy Anderson)</a>!

h2. 0.1.2

* Fixed bug with nil exception on 'empty' belongs_to association. Thanks to <a href="https://github.com/dgm" target="_blank">dgm</a>!

h2. 0.1.1

* Fixed bug with "Select ..." buttons introduced in 0.1.0.
* Added tests for these buttons.

h2. v0.1.0

* new <tt>find_for_table</tt> option <tt>:stateful</tt>. If

<pre>
  MyFancyModel.find_for_table params, :stateful => session
</pre>

is given, the current sorting, filtering, selecting and paging information is stored to the session and restored when reopened. Great for procession specifically filtered lists.

h2. v0.0.5 (2011-03-28)

* new column option :map (defaults to true) to disable automatic mapping on the enries of the association as in

  <pre>
  <%= table_for @products do |t|
    ...
    t.association :tags, :title # mapped to all tags
    t.association :tags, :count, :map => false # called on the list-of-tags
  end %>
  </pre>


h2. v0.0.4 (2011-03-27)

* fixed the path to paging/sorting images installed by generator. Thanks to <a href="https://github.com/sdsykes" target="_blank">sdsykes</a>!